--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.6.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 Django==4.2.1
+psycopg2-binary==2.9.6
 idna==3.4
 requests==2.31.0
 sqlparse==0.4.4
